# arc

./: .gitmodules  setup_vcpkg.bat  setup_vcpkg.sh
arduino/: CMakeLists.txt
arduino/include/: Arduino.h  HardwareSerial.h  Print.h  Stream.h  Wire.h
arduino/src/: HardwareSerial.cpp  Wire.cpp
autopilot/: AP_GPS.cpp  AP_GPS.h  AP_Heartbeat.cpp  AP_Heartbeat.h  AP_Hil.cpp  AP_Hil.h  AP_LinAlg.cpp  AP_LinAlg.h  AP_MMC5983MA.cpp  AP_MMC5983MA.h  AP_Magnetometer.cpp  AP_Magnetometer.h  AP_Mavlink.cpp  AP_Mavlink.h  AP_NMEA.cpp  AP_NMEA.h  AP_Program.cpp  AP_Program.h  AP_Random.cpp  AP_Random.h  AP_Time.cpp  AP_Time.h  AP_UbloxGPS.cpp  AP_UbloxGPS.h  AP_Vehicle.h  AP_WGS84.cpp  AP_WGS84.h  CMakeLists.txt  CMakePresets.json  NN_Interpreter.cpp  NN_Interpreter.h  NN_Lexer.cpp  NN_Lexer.h  NN_Linear.cpp  NN_Linear.h  NN_Loss.cpp  NN_Loss.h  NN_Module.cpp  NN_Module.h  NN_Net.cpp  (+25 more)
autopilot/examples/: CMakeLists.txt  gps.cpp
autopilot/sim/: CMakeLists.txt  Options.cpp  Options.h  TcpStream.cpp  TcpStream.h  main.cpp
autopilot/tests/: CMakeLists.txt  gps.cpp  interpreter.cpp  lexer.cpp  nmea.cpp  parser.cpp  random.cpp  reg_counter.cpp
engine/: CMakeLists.txt  CMakePresets.json
engine/editor/: PropertiesEditor.cpp  PropertiesEditor.h  SceneEditor.cpp  SceneEditor.h  Util.cpp  Util.h  Viewport.cpp  Viewport.h  main.cpp
engine/proto/engine/: camera.proto  float3.proto  game.proto  mesh.proto  scene.proto  transform.proto
engine/proto/engine/physics/: body.proto  box.proto  capsule.proto  collider.proto  sphere.proto
simulation/: CMakeLists.txt
simulation/include/sim/: Env.h  EnvRegistry.h
simulation/src/: BoatDriver.cpp  BoatDriver.h  Env.cpp  EnvRegistry.cpp  LunarLander.cpp  LunarLander.h  ThrusterAction.cpp  ThrusterAction.h
testbed/: CMakeLists.txt  GcsTest.cpp  GcsTest.h  NetTest.cpp  NetTest.h  NullSerial.cpp  Renderer.cpp  Renderer.h  Serial.h  Simulation.cpp  Simulation.h  main.cpp
testbed/win32/: Serial.cpp
vz/: CMakeLists.txt  CMakePresets.json  imgui.cmake  implot.cmake
vz/examples/: CMakeLists.txt  custom_shader.cpp  mesh.cpp  monkey.stl  ui.cpp
vz/glad/: CMakeLists.txt
vz/glad/include/glad/: glad.h
vz/glad/src/: glad.c
vz/include/: vz.h
vz/shaders/: grid.frag  grid.vert  mesh.frag  mesh.vert
vz/src/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Framebuffer.cpp  Framebuffer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  vz.cpp
